Release 1.0
* Primo push

* Secondo sprint: Pagine di login, dashboard e gestione file json

* Commento dei vari codici

* Sistemazione salvataggio media e caricamento per i post

* Prime classi di test

* Prime classi di test

* feat: Aggiunta implementazione iniziale dell'applicazione Brewhub con UI, modelli e test.

* Refactor del codice e commenti seguendo javadoc

* UI per visualizzazione profilo

* Implementazione pagine per amministrazione e miglioramento UI

* Gestione del database con backup e ripristino

* Actions per gestione librerie, continuous delivery, controllo sulla sicurezza (codeql) e continuous integration

* Configurazione actions

* Risoluzione errore CI

* Implementazione chat tra utenti singoli e gruppi di utenti

* Nuovi classi di test

* Implementazione sistema di eventi

* implementazione sfide e condivisione

* Aggiunte nuove classi di test
Refactor e ottimizzazione di test
Documentazione javadoc per tutto il codice

* Aggiunta di README.md

* Refactor dei metodi DAO (Data Access Layer) e delle classi main

* Refactor, ottimizzazione e documentazione main

* Aggiunto jacoco per verifica copertura test

* Release 1.0

* Release 1.0

---------

Co-authored-by: m.viscovo2004 <Marco@10.80.2.231>